--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "doctrine/doctrine-bundle": "1.0.*",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
         "liip/functional-test-bundle": "dev-master",
-        "liip/doctrine-cache-bundle": "dev-master"
+        "liip/doctrine-cache-bundle": "dev-master",
+        "sonata-project/doctrine-phpcr-admin-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
